--- a/Source/Frontend/winshop/src/Components/Admin/ProductsPage/ProductsPage.css
+++ b/Source/Frontend/winshop/src/Components/Admin/ProductsPage/ProductsPage.css
@@ -1,5 +1,21 @@
 .ProductsPage {
   padding: 20px;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-column-gap: 10px;
+  grid-row-gap: 20px;
+  background-color: #f5f5fa;
+}
+.ProductPage-addButton {
+  right: 0px;
+  width: fit-content;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 20px;
+  background-color: #7de5ed;
+  padding: 5px;
+  border-radius: 5px;
+  cursor: pointer;
+  box-shadow: 1px 1px 3px 1px grey;
 }
