--- a/Source/Frontend/winshop/src/Components/Admin/OrdersPage/OrderBox.css
+++ b/Source/Frontend/winshop/src/Components/Admin/OrdersPage/OrderBox.css
@@ -4,10 +4,12 @@
   padding: 10px;
   box-shadow: 0px 0px 10px 2px grey;
   position: relative;
+  cursor: pointer;
 }
 
 .orderBox-content-container {
   margin-bottom: 7px;
+  cursor: default;
 }
 
 .orderBox-status-title {
